<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav"
    app:startDestination="@id/home_fragment">

    <fragment
        android:id="@+id/home_fragment"
        android:name="com.phucnguyen.khoaluantotnghiep.HomeFragment"
        android:label="@string/home_title"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/find_products_fragment"
        android:name="com.phucnguyen.khoaluantotnghiep.FindProductsFragment"
        android:label="@string/search_title"
        tools:layout="@layout/find_products_fragment" />
    <fragment
        android:id="@+id/hot_products_fragment"
        android:name="com.phucnguyen.khoaluantotnghiep.HotProductsFragment"
        android:label="@string/hot_title"
        tools:layout="@layout/fragment_hot_products" />
    <fragment
        android:id="@+id/setting_fragment"
        android:name="com.phucnguyen.khoaluantotnghiep.SettingFragment"
        android:label="@string/setting_title"
        tools:layout="@layout/fragment_setting" />
</navigation>