<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="16dp"
    android:orientation="vertical"
    tools:context=".WelcomeFragment">

    <ImageView
        android:id="@+id/imgBanner"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:adjustViewBounds="true"
        android:layout_marginHorizontal="32dp"
        android:layout_gravity="center_horizontal"
        android:scaleType="fitXY"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/title_welcome"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="2"
        android:text="@string/text_welcome"
        android:textAlignment="center"
        android:textColor="#ACA5A5"
        android:textAppearance="?attr/textAppearanceBody1"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnStartOnBoarding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#39B3E8"
        android:text="@string/button_text_start_manual"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:cornerRadius="5dp" />

</androidx.appcompat.widget.LinearLayoutCompat>