<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/refreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.ProductItemFragment">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:nestedScrollingEnabled="true"
        tools:context=".ui.fragment.ProductItemFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="4dp"
                app:layout_scrollFlags="scroll|enterAlways">

                <ImageView
                    android:id="@+id/imgProductItem"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/img_product_ava_des"
                    android:scaleType="centerCrop" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:layout_toEndOf="@id/imgProductItem"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tvPriceCurrency"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:text="@string/price_currency"
                            android:textAppearance="?attr/textAppearanceBody1"
                            android:textSize="24sp" />

                        <TextView
                            android:id="@+id/tvPrice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/default_text_placeholder"
                            android:textAppearance="?attr/textAppearanceBody1"
                            android:textSize="24sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tvProductItemRate"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/default_text_placeholder"
                                android:textAppearance="?attr/textAppearanceBody1"
                                android:textColor="#ACA5A5" />

                            <ImageView
                                android:layout_width="12dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="4dp"
                                android:layout_marginEnd="48dp"
                                android:contentDescription="@string/img_product_rate_icon_des"
                                android:scaleType="centerCrop"
                                android:src="@drawable/ic_star" />

                            <TextView
                                android:id="@+id/tvProductItemReview"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/default_text_placeholder"
                                android:textAppearance="?attr/textAppearanceBody1"
                                android:textColor="#ACA5A5" />

                            <ImageView
                                android:layout_width="12dp"
                                android:layout_height="12dp"
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="4dp"
                                android:contentDescription="@string/img_product_reviews_quantities_icon_des"
                                android:scaleType="centerCrop"
                                android:src="@drawable/ic_comment" />
                        </LinearLayout>


                    </LinearLayout>


                </LinearLayout>
            </RelativeLayout>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/productItemTabs"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:elevation="5dp"
                app:tabPaddingBottom="8dp"
                app:tabPaddingTop="8dp" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/productItemPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabFav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:backgroundTint="#FFFFFF"
            android:contentDescription="@string/fab_fav_des" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgActionGoToStore"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="96dp"
            android:contentDescription="@string/fab_go_to_store_des"
            android:scaleType="centerCrop" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
